--- a/support/static/ngTemplates/app.knowledgeBase.html
+++ b/support/static/ngTemplates/app.knowledgeBase.html
@@ -16,7 +16,7 @@
               <!-- <i style="padding-top:5px;" class="fa fa-plus fa-md"></i> -->
             </div>
             <div class="" style="min-height:40vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
-              <div  ng-mouseover="titleDesc($index)" ng-mouseleave="hidetitleDesc($index)" class="" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin-top:10px ;padding:5px;height:35px; {{docForm.pk==doc.pk?'border-bottom:2px solid #009efb ;':'border-bottom:2px solid #e9e9e9 !important;'}}">
+              <div  ng-mouseover="titleDesc($index)" ng-mouseleave="hidetitleDesc($index)" class="" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin-top:10px ;padding:5px; {{docForm.pk==doc.pk?'border-bottom:2px solid #009efb ;':'border-bottom:2px solid #e9e9e9 !important;'}}">
                 <div ng-if="!showDesc[$index]" style="font-size:15px;">{{doc.title}}</div>
                 <ul ng-if="showDesc[$index]" style="list-style:none;margin-bottom:0px;font-size:13px;opacity:0.7" class="list-inline">
                   <li>Last modified: {{doc.updated  | date:'dd-MMM-yyyy'}}</li>
