--- a/homepage/static/ngTemplates/app.homepage.blogDetails.html
+++ b/homepage/static/ngTemplates/app.homepage.blogDetails.html
@@ -37,7 +37,7 @@
           <div >
             <input class="form-control" type="text" name="" value="" ng-model="emailAddress" placeholder="email address">
           </div>
-          <div class="sendUpdates" ng-click=sendUpdates()>
+          <div class="sendUpdates btn_gradient" ng-click=sendUpdates()>
             Send Updates!
           </div>
         </div>
