--- a/homepage/static/ngTemplates/app.homepage.book.html
+++ b/homepage/static/ngTemplates/app.homepage.book.html
@@ -75,28 +75,28 @@
       <!-- <img src="/static/images/24tut/atomic.png" width="50%"style="position:absolute;z-index:-100;top:18%;left:21%;opacity:0.2;"> -->
       <div class="row" style="font-size:18px;display:inline-block;text-align:left;width:100%;">
         <ul class="list-unstyled chap_list">
-          <li><a href="/chapter"><span>Introduction to Physics</span></a></li>
-          <li><a href="/hc-verma-physics"><span>Physics and Mathematics</span></a></li>
-          <li><a href="/hc-verma-kinematics"><span>Rest and Motion Kinematics</span></a></li>
-          <li><a href="/hc-verma-forces"><span>The Forces</span></a></li>
-          <li><a href="/hc-verma-nlm"><span>Newton's Laws of Motion</span></a></li>
-          <li><a href="/hc-verma-friction"><span>Friction</span></a></li>
-          <li><a href="/hc-verma-circular-motion"><span>Circular Motion</span></a></li>
-          <li><a href="/hc-verma-work-energy"><span>Work and Energy</span></a></li>
-          <li><a href="/hc-verma-center-of-mass"><span>Centre of Mass, Linear Momentum, Collision</span></a></li>
-          <li><a href="/hc-verma-rotational-mechanics"><span>Rotational Mechanics</span></a></li>
-          <li><a href="/hc-verma-gravitation"><span>Gravitation</span></a></li>
-          <li><a href="/hc-verma-shm"><span>Simple Harmonics Motion</span></a></li>
-          <li><a href="/hc-verma-fluid-mechanics"><span>Fluid Mechanics</span></a></li>
-          <li><a href="/hc-verma-mechanical-properties"><span>Some Mechanical Properties of Matter</span></a></li>
-          <li><a href="/hc-verma-wave-motion"><span>Wave Motion and Waves on a String</span></a></li>
-          <li><a href="/hc-verma-sound-waves"><span>Sound Waves</span></a></li>
-          <li><a href="/hc-verma-light-waves"><span>Light Waves</span></a></li>
-          <li><a href="/hc-verma-geometrical-optics"><span>Geometrical Optics</span></a></li>
-          <li><a href="/hc-verma-optical-instuments"><span>Optical Instruments</span></a></li>
-          <li><a href="/hc-verma-dispersion"><span>Dispersion and Spectra</span></a></li>
-          <li><a href="/hc-verma-speed-of-light"><span>Speed of Light</span></a></li>
-          <li><a href="/hc-verma-photometry"><span>Photometry</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Introduction to Physics</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'physics-and-mathematic'})"><span>Physics and Mathematics</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'rest-and-motion-kinematics'})"><span>Rest and Motion Kinematics</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'rest-and-motion-kinematics'})"><span>The Forces</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'the-forces'})"><span>Newton's Laws of Motion</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Friction</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Circular Motion</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Work and Energy</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Centre of Mass, Linear Momentum, Collision</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Rotational Mechanics</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Gravitation</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Simple Harmonics Motion</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Fluid Mechanics</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Some Mechanical Properties of Matter</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Wave Motion and Waves on a String</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Sound Waves</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Light Waves</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Geometrical Optics</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Optical Instruments</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'introduction-to-physics'})"><span>Dispersion and Spectra</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'Speed of Light'})"><span>Speed of Light</span></a></li>
+          <li><a ui-sref="chapter({chapterName: 'photometry'})"><span>Photometry</span></a></li>
         </ul>
       </div>
     </div>
