--- a/homepage/static/ngTemplates/app.homepage.ncert.html
+++ b/homepage/static/ngTemplates/app.homepage.ncert.html
@@ -23,7 +23,7 @@
           </div>
           <div class="sub_list">
             <ul class="list-unstyled">
-              <li> <img src="/static/images/24tut/abacus.png" width="10%"> <a href="/book">NCERT Solution for class 12 Maths</a> </li>
+              <li> <img src="/static/images/24tut/abacus.png" width="10%"> <a href="/hc-verma-solutions">NCERT Solution for class 12 Maths</a> </li>
               <li> <img src="/static/images/24tut/atomic.png" width="10%"> <a href="/book">NCERT Solution for class 12 Physics</a> </li>
               <li> <img src="/static/images/24tut/dna.png" width="10%"> <a href="/book">NCERT Solution for class 12 Biology</a> </li>
               <li> <img src="/static/images/24tut/beaker.png" width="10%"> <a href="/book">NCERT Solution for class 12 Chemistry</a> </li>
