--- a/LMS/static/ngTemplates/app.LMS.configure.form.html
+++ b/LMS/static/ngTemplates/app.LMS.configure.form.html
@@ -63,7 +63,7 @@
       </div>
       <div class="form-group">
         <label>Subject</label>
-        <input type="text" class="form-control" ng-model="form.subject" uib-typeahead="subject as subject.title for subject in subjectSearch($viewValue)">
+        <input type="text" class="form-control" ng-model="form.subject" uib-typeahead="subject as subject.title + ' class ' + subject.level  for subject in subjectSearch($viewValue)">
       </div>
       <div class="form-group">
         <label>Description</label>
