--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a ng-click="toggleSideMenu()" class="navbar-brand" style="color:white;background:var(--themeMain);cursor:pointer;" >
+      <a ng-click="toggleSideMenu()" class="navbar-brand" >
         <i style="margin-top:-10px;" class="fa fa-bars fa-2x"></i>
       </a>
 
