--- a/static_shared/ngTemplates/genericAppBase.html
+++ b/static_shared/ngTemplates/genericAppBase.html
@@ -3,7 +3,7 @@
     <div class="col-md-10 col-lg-11" style="padding:0px;">
       <div ui-view></div>
     </div>
-    <div class="col-md-2 col-lg-1 animated fadeIn" style="position:absolute; height:100%;top:0px;right:0px;background-color:var(--themeMain);color:white;">
+    <div class="col-md-2 col-lg-1 animated fadeIn" style="position:absolute; height:100%;top:0px;right:0px;border-left:solid 2px #eee">
       <div ui-view="menu"></div>
     </div>
   </div>
