--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -22,10 +22,18 @@
     <img ng-src="{{user.pk | getDP}}" class="img img-circle" style="width:50px;margin-left:20px;">
   </div>
   <div class="row" style="margin:0px;">
-    <div class="container-fluid" style="{{sideMenuVisibility ? 'border-bottom:solid 2px #eeeeee;':''}};padding:0px;">
-      <div class="col-md-{{sideMenuVisibility? '3':'6'}} basicAppLink text-center" ng-repeat="a in fixedApps" ng-class="{active: $state.is(a.state)}" ng-click="$state.go(a.state)">
+    <div class="container-fluid" style="padding:0px;">
+
+
+
+      <div class="col-md-6 basicAppLink text-center" ng-repeat="a in fixedApps" ng-class="{active: $state.is(a.state)}" ng-click="$state.go(a.state)">
         <span>
           <i class="fa fa-{{a.icon}} fa-2x"></i>
+        </span>
+      </div>
+      <div class="col-md-12 basicAppLink text-center" ng-class="{active: $state.is('home')}" ng-click="$state.go('home')">
+        <span>
+          <i class="fa fa-home fa-2x"></i>
         </span>
       </div>
     </div>
@@ -35,7 +43,7 @@
     <div class="container-fluid">
       <ul class="nav nav-sidebar padded" style="width:100%;">
         <li ng-class="{active: $state.includes(a.state)}" ng-repeat="a in apps" style="width:transition:10s" ng-mouseover="onHover=true" ng-mouseleave="onHover=false">
-          <a ui-sref="{{a.state}}" style="{{ onHover&&!sideMenuVisibility ? 'width:215%;border-radius:0 30px 30px 0' : ''}}">
+          <a ui-sref="{{a.state}}" style="{{ onHover&&!sideMenuVisibility ? 'width:250%;border-radius:0 30px 30px 0' : ''}}">
             <div ng-if="sideMenuVisibility" align="left">
               <div class="row container-fluid">
                 <div class="col-md-3">
