--- a/support/static/ngTemplates/app.projects.html
+++ b/support/static/ngTemplates/app.projects.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="container-fluid">
       <uib-tabset>
-        <uib-tab>
+        <uib-tab active="searchTabActive.active">
           <uib-tab-heading>
             New <i class="fa fa-plus"></i>
           </uib-tab-heading>
